refactor themes functionality